# readthedocs-custom-steps

./: .gitignore  .readthedocs.yml  MANIFEST.in  Makefile  README.md  package.yaml  pyproject.toml  readme.md  setup.py
.changelog/: 0.2.0.toml  0.2.0.yml  0.3.0.toml  0.4.0.toml  0.4.0.yml  0.5.0.toml  0.5.0.yml  0.5.1.toml  0.5.1.yml  0.6.0.toml  0.6.2.toml  _unreleased.toml  _unreleased.yml
.github/workflows/: python-app.yml  python-package.yml
docs/: mkdocs.yml  requirements.txt
readthedocs-custom-steps/: MANIFEST.in  package.yaml  setup.py
readthedocs-custom-steps/.changelog/: 0.3.0.yml  _unreleased.yml
readthedocs-custom-steps/src/: readthedocs_custom_steps.py
readthedocs-custom-steps/src/test/: .readthedocs-custom-steps.yml  test_readthedocs_custom_steps.py
src/: readthedocs_custom_steps.py  test_readthedocs_custom_steps.py
src/test/: test_readthedocs_custom_steps.py
test/: .readthedocs-custom-steps.yml  Makefile  readthedocs-config.yml  test_readthedocs_custom_steps.py
