[project]
version = "0.6.1"

[tool.readthedocs-custom-steps]
script = """
cp readme.md docs/content/index.md
slam changelog format --all --markdown >docs/content/changelog.md
python -m "$@"
"""

[tool.slam.check]
plugins = ['changelog', 'release']

[tool.slam.release]
references = [
  { file = "setup.py", pattern = "  version = '{version}'"}
]
