[project]
version = "0.6.2"

[tool.readthedocs-custom-steps]
script = """
cp readme.md docs/content/index.md
slam changelog format --all --markdown >docs/content/changelog.md
python -m "$@"
"""

[tool.slam.check]
plugins = ['changelog', 'release']

[tool.slam.release]
references = [
  { file = "package.yaml", pattern = "version: {version}$" },
  { file = "setup.py", pattern = "  version = '{version}'" },
]
